--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,6 +36,14 @@ nav a {
   color: #fd6e0a;
 }
 /*Header Related Style*/
-.header{
-    background-color: #FFF8F3;
+.header {
+  background-color: #fff8f3;
+}
+.banner {
+  padding: 30px 30px 30px 150px;
+}
+.banner .profile-picture {
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
 }
