--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -76,6 +76,10 @@ nav a {
 }
 
 /*main section styles*/
+main {
+  width: 1140px;
+  margin: 0 auto;
+}
 
 /*About Section style*/
 .about {
@@ -83,4 +87,11 @@ nav a {
   border-radius: 10px;
   background-color: #fff8f3;
   margin: 130px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
 }
