--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,7 +80,9 @@ main {
   width: 1140px;
   margin: 0 auto;
 }
-
+main section{
+  margin: 130px;
+}
 /*About Section style*/
 .about {
   padding: 130px;
@@ -94,8 +96,21 @@ main {
 }
 .about-info {
   text-align: center;
-
 }
-#what-i-do-Description{
+/*skill related styles*/
+
+#what-i-do-Description {
   padding: 30px 150px;
+}
+.skill-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
+}
+.skill-description {
 }
