--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,8 +80,8 @@ main {
   width: 1140px;
   margin: 0 auto;
 }
-main section{
-  margin: 130px;
+main section {
+  margin-top: 130px;
 }
 /*About Section style*/
 .about {
@@ -110,7 +110,19 @@ main section{
   padding: 30px;
   border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 .skill-description {
+  color: #757575;
+}
+/*resume section style*/
+.resume-column-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: normal;
+}
+.resume-container {
+  display: flex;
+  justify-content: space-between;
 }
